// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message definitions Accidenty undefined message 1`] = `null`;

exports[`Message definitions Proper type/msg container with array of problems, from the front validator 1`] = `
Array [
  <div
    className="msgLine"
  >
    <span
      className="errorText"
    >
      Too long firstname!
    </span>
    <a
      href="#first_name"
    >
      <i
        className="material-icons"
      >
        arrow_back
      </i>
    </a>
  </div>,
  <div
    className="msgLine"
  >
    <span
      className="errorText"
    >
      Too short password text!
    </span>
    <a
      href="#password"
    >
      <i
        className="material-icons"
      >
        arrow_back
      </i>
    </a>
  </div>,
  <div
    className="msgLine"
  >
    <span
      className="errorText"
    >
      Not correct password confirmation!
    </span>
    <a
      href="#password_repeat"
    >
      <i
        className="material-icons"
      >
        arrow_back
      </i>
    </a>
  </div>,
]
`;

exports[`Message definitions Proper type/msg container with normal string message 1`] = `
<div
  className="msgLine"
>
  <p
    className="msgText"
  >
    You have updated your account!
  </p>
</div>
`;

exports[`Message definitions Proper type/msg container with server error msg 1`] = `
<div
  className="msgLine"
>
  <span
    className="errorText"
  >
    You should give the proper password!
  </span>
  <a
    href="#password"
  >
    <i
      className="material-icons"
    >
      arrow_back
    </i>
  </a>
</div>
`;

exports[`Message definitions Proper type/msg container with string error message 1`] = `
<div
  className="msgLine"
>
  <p
    className="errorText"
  >
    Server error, no such content!
  </p>
</div>
`;
